// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{}"
  id="default"
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.top - value[0] 1`] = `
<div
  className="{}"
  id="properties.top"
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.top 1`] = `true`;

exports[`Test Schema properties.top 2`] = `null`;
